// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note Form renders add if no note prop 1`] = `
<NoteForm
  onComplete={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <h3>
      Adding New Note
    </h3>
    <input
      name="title"
      onChange={[Function]}
      value=""
    />
    <textarea
      cols="30"
      name="content"
      onChange={[Function]}
      rows="2"
      value=""
    />
    <button>
      Submit
    </button>
  </form>
</NoteForm>
`;

exports[`Note Form renders add if no note prop 2`] = `
<NoteForm
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "completed": false,
            "content": "is so good",
            "title": "Blueberry Muffin",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h3>
      Adding New Note
    </h3>
    <input
      name="title"
      onChange={[Function]}
      value="Blueberry Muffin"
    />
    <textarea
      cols="30"
      name="content"
      onChange={[Function]}
      rows="2"
      value="is so good"
    />
    <button>
      Submit
    </button>
  </form>
</NoteForm>
`;
